<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="1000px"
        android:layout_height="100px"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="Welcome To My Application"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="183dp" />
</androidx.constraintlayout.widget.ConstraintLayout>